@@ -1,3 +1,8 @@
+2004-11-29  Mark Kettenis  <kettenis@gnu.org>
+
+	* fork-child.c (fork_inferior): Fork instead of vfork if
+	PRE_TRACE_FUN is non-null.
+
 2004-11-24  Fred Fish  <fnf@specifixinc.com>
 
 	* rs6000-tdep.c (skip_prologue): Use line table info to skip over
